k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: ci-excellence
    component: app
spec:
  selector:
    app: ci-excellence
    component: app
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  type: ClusterIP
